# clair

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: MEMORY.md
.claude/agent-memory/product-manager/: MEMORY.md  project_environments_spec.md  project_routing_collisions.md
.claude/agent-memory/shared/: MEMORY.md
.claude/agents/: product-manager.md  software-architect.md  software-engineer.md  software-tester.md
.claude/memory/: feedback_defensive_enum_branching.md  feedback_no_string_output_tests.md
.claude/specs/: pandas_trouve.md  pandas_trouve_arch.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml
docs/: architecture-clair-docs.md  prd-clair-docs.md
example_notebooks/: README.md  dag.html  dag_basics.ipynb  requirements.txt
example_projects/example_1/: README.md
example_projects/example_2/: README.md
example_projects/example_3/: README.md
example_projects/example_4/: README.md
example_projects/example_from_init/: .gitignore
site-docs/: mkdocs.yml
site-docs/docs/: index.md  installation.md  quickstart.md
site-docs/docs/cli/: clean.md  dag.md  (+6 more)
specs/: environments.md
src/clair/: __init__.py  _logging.py  exceptions.py  lineage.py
tests/: conftest.py
tests/unit/: test_build_sql.py  test_clean.py  test_column_inference.py  test_compiler.py  test_compiler_pandas.py  test_dag.py  test_dag_render.py  test_discovery.py  test_discovery_pandas.py  test_environments.py  test_routing.py  test_run_config.py  test_runner.py  test_runner_pandas.py  test_scaffold.py  test_selector.py  test_test_runner.py  test_trouves.py
(+120 files in other folders)
