[project]
name = "rivage-clair"
version = "0.1.1"
description = "Python-native data transformation framework for Snowflake"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Omer Baddour", email = "contact.omerbaddour@gmail.com" },
]
urls = { Homepage = "https://github.com/rivage-sh/clair" }
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "click>=8.0",
    "snowflake-connector-python[pandas]>=3.0",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "uuid6>=2022.10.25",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
examples = [
    "jupyter",
    "ipykernel",
    "matplotlib",
    "pyvis",
]

[project.scripts]
clair = "clair.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clair"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Snowflake connection",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
]

[tool.uv]
exclude-newer = "7 days"
